Fixed image paths

--- a/INDEX.html
+++ b/INDEX.html
@@ -127,7 +127,7 @@ footer{
 
 <header>
     <!-- LOGO -->
-    <img src="C:\Users\Selva Surekha\Downloads\ChatGPT Image Dec 26, 2025, 08_12_41 PM.png" class="logo" onclick="zoomLogo()">
+    <img src="images/ivoryleaves.png" alt="Amor Towels".png" class="logo" onclick="zoomLogo()">
 
     <!-- SHOP NAME -->
     <div class="shop-name">Surekha’s Ivory Leaves</div>
@@ -157,29 +157,29 @@ footer{
 
     <div class="row">
         <div class="box" onclick="go('novels.html')">
-            <img src="C:\Users\Selva Surekha\Downloads\novel cover page .jpeg">
+            <img src="images/novel_cover_page .jpeg" alt="Be You">">
             <div class="box-title">📖 Novels</div>
         </div>
 
         <div class="box" onclick="go('short-stories.html')">
-            <img src="C:\Users\Selva Surekha\Downloads\short stories cover page.jpg">
+            <img src="images/short_stories_cover_page.jpg">
             <div class="box-title">✍ Short Stories</div>
         </div>
 
         <div class="box" onclick="go('kids.html')">
-            <img src="C:\Users\Selva Surekha\Downloads\kids cover page.jpg">
+            <img src="images/kids_cover_page.jpg">
             <div class="box-title">🧸 Kids</div>
         </div>
     </div>
 
     <div class="row">
         <div class="box" onclick="go('poetry.html')">
-            <img src="C:\Users\Selva Surekha\Downloads\poetry cover pge.jpg">
+            <img src="images/poetry_cover_page.jpg">
             <div class="box-title">🪶 Poetry</div>
         </div>
 
         <div class="box" onclick="go('detective.html')">
-            <img src="C:\Users\Selva Surekha\Downloads\detective cover page.jpg">
+            <img src="images/detective_cover_page.jpg">
             <div class="box-title">🕵 Detective</div>
         </div>
     </div>
