--- a/detective.html
+++ b/detective.html
@@ -18,27 +18,27 @@ h1{text-align:center;}
 
 <div class="books">
     <div class="book" onclick="order('The First Case','₹420')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\the first case.png">
+        <img src="images/the_first_case.png">
         <div class="book-title">🔎 The First Case</div>
     </div>
 
     <div class="book" onclick="order('Lock and Mori','₹480')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\lock and mori.png">
+        <img src="images/lock_and_mori.png">
         <div class="book-title">🗝 Lock and Mori</div>
     </div>
 
     <div class="book" onclick="order('Following','₹360')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\Following.png">
+        <img src="images/following.png">
         <div class="book-title">👣 Following</div>
     </div>
 
     <div class="book" onclick="order('Fake ID','₹390')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\fake id.png">
+        <img src="images/fake_id.png">
         <div class="book-title">🆔 Fake ID</div>
     </div>
 
     <div class="book" onclick="order('The Cousins','₹410')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\the Cousins.png">
+        <img src="images/the_cousins.png">
         <div class="book-title">👥 The Cousins</div>
     </div>
 </div>
