--- a/poetry.html
+++ b/poetry.html
@@ -18,27 +18,27 @@ h1{text-align:center;}
 
 <div class="books">
     <div class="book" onclick="order('Mary Oliver','₹400')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\mary oliver.png">
+        <img src="images/mary_oliver.png">
         <div class="book-title">🌿 Mary Oliver</div>
     </div>
 
     <div class="book" onclick="order('The Hill We Climb','₹450')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\the hill we climb.png">
+        <img src="images/the_hill_we_climb.png">
         <div class="book-title">⛰ The Hill We Climb</div>
     </div>
 
     <div class="book" onclick="order('Remind Me Again','₹320')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\remaind me again.png">
+        <img src="images/remind_me_again.png">
         <div class="book-title">💭 Remind Me Again</div>
     </div>
 
     <div class="book" onclick="order('Sylvia Plath','₹500')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\sylvia path.png">
+        <img src="images/sylvia_plath.png">
         <div class="book-title">🖋 Sylvia Plath</div>
     </div>
 
     <div class="book" onclick="order('Cross Roads','₹350')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\cross roads.png">
+        <img src="images/cross_roads.png">
         <div class="book-title">🛤 Cross Roads</div>
     </div>
 </div>
