--- a/short-stories.html
+++ b/short-stories.html
@@ -43,27 +43,27 @@ h1{
 
 <div class="books">
     <div class="book" onclick="order('The Famous Five','₹350')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\the famous five.png">
+        <img src="images/the_famous_five.png">
         <div class="book-title">📘 The Famous Five</div>
     </div>
 
     <div class="book" onclick="order('Everything Inside','₹420')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\Everything inside .png">
+        <img src="images/everything_inside.png">
         <div class="book-title">📖 Everything Inside</div>
     </div>
 
     <div class="book" onclick="order('Amor Towels','₹380')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\Amor towels.png">
+        <img src="images/amor_towels.png">
         <div class="book-title">❤️ Amor Towels</div>
     </div>
 
     <div class="book" onclick="order('Furance','₹300')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\furnace.png">
+        <img src="images/furnace.png">
         <div class="book-title">✨ Furance</div>
     </div>
 
     <div class="book" onclick="order('Sour Heart','₹360')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\Sour heart.png">
+        <img src="images/sour_heart.png">
         <div class="book-title">💔 Sour Heart</div>
     </div>
 </div>
