--- a/kids.html
+++ b/kids.html
@@ -18,27 +18,27 @@ h1{text-align:center;}
 
 <div class="books">
     <div class="book" onclick="order('The Little Dreamer','₹250')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\the little dreamers .png">
+        <img src="images/the_little_dreamers .png">
         <div class="book-title">🌈 The Little Dreamer</div>
     </div>
 
     <div class="book" onclick="order('Be You','₹220')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\Be You.png">
+        <img src="images/be_you.png">
         <div class="book-title">😊 Be You</div>
     </div>
 
     <div class="book" onclick="order('Prairie Lotus','₹300')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\praire Lotus.png">
+        <img src="images/prairie_lotus.png">
         <div class="book-title">🌸 Prairie Lotus</div>
     </div>
 
     <div class="book" onclick="order('Investigators','₹280')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\Investigators.png">
+        <img src="images/investigators.png">
         <div class="book-title">🔍 Investigators</div>
     </div>
 
     <div class="book" onclick="order('Billionaire Boy','₹260')">
-        <img src="C:\Users\Selva Surekha\Pictures\Screenshots\The billionare boy.png">
+        <img src="images/the_billionare_boy.png">
         <div class="book-title">💰 Billionaire Boy</div>
     </div>
 </div>
