Fix mistake in code

--- a/kids.html
+++ b/kids.html
@@ -23,12 +23,12 @@ h1{text-align:center;}
     </div>
 
     <div class="book" onclick="order('Be You','₹220')">
-        <img src="images/be_you.png">
+        <img src="images/beyou.png">
         <div class="book-title">😊 Be You</div>
     </div>
 
     <div class="book" onclick="order('Prairie Lotus','₹300')">
-        <img src="images/prairie_lotus.png">
+        <img src="images/praire_Lotus.png">
         <div class="book-title">🌸 Prairie Lotus</div>
     </div>
 
