--- a/poetry.html
+++ b/poetry.html
@@ -28,12 +28,12 @@ h1{text-align:center;}
     </div>
 
     <div class="book" onclick="order('Remind Me Again','₹320')">
-        <img src="images/remind_me_again.png">
+        <img src="images/remaind_me_again.png">
         <div class="book-title">💭 Remind Me Again</div>
     </div>
 
     <div class="book" onclick="order('Sylvia Plath','₹500')">
-        <img src="images/sylvia_plath.png">
+        <img src="images/sylvia_path.png">
         <div class="book-title">🖋 Sylvia Plath</div>
     </div>
 
