--- a/short-stories.html
+++ b/short-stories.html
@@ -43,7 +43,7 @@ h1{
 
 <div class="books">
     <div class="book" onclick="order('The Famous Five','₹350')">
-        <img src="images/the_famous_five.png">
+        <img src="images/thefamousfive.png">
         <div class="book-title">📘 The Famous Five</div>
     </div>
 
@@ -53,7 +53,7 @@ h1{
     </div>
 
     <div class="book" onclick="order('Amor Towels','₹380')">
-        <img src="images/amor_towels.png">
+        <img src="images/amortowels.png">
         <div class="book-title">❤️ Amor Towels</div>
     </div>
 
